<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_observations"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/observations" />
        <item
            android:id="@+id/nav_atlas"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/atlas" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/about" />
    </group>

</menu>
